--- a/FrontEnd/driverDashboard.html
+++ b/FrontEnd/driverDashboard.html
@@ -34,6 +34,7 @@
         <tr>
             <th scope="col">Booking ID</th>
             <th scope="col">Customer</th>
+            <th scope="col">Car</th>
             <th scope="col">Start Date</th>
             <th scope="col">End Date</th>
             <th scope="col">Option</th>
@@ -43,9 +44,10 @@
         <tr>
             <td>BK-001</td>
             <td>Saman Kumara</td>
+            <td>KL-1234</td>
             <td>2023-02-15</td>
             <td>2023-03-16</td>
-            <td><button class="btn-sm btn-success mr-2">Get Job</button><button class="btn-sm btn-danger mr-2">Reject</button></td>
+            <td><button class="btn-sm btn-success">Get Job</button></td>
         </tr>
         </tbody>
     </table>
