--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
 
         *{
             scroll-behavior: smooth;
+            transition: all 1s;
         }
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
         body{
@@ -120,7 +121,7 @@
                         Username
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item btn" type="button"  data-toggle="modal" data-target=".bd-example-modal-lg">Settings</a>
+                        <a class="dropdown-item btn" type="button"  data-toggle="modal" data-target=".bd-settings-modal-lg">Settings</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Logout</a>
                     </div>
@@ -137,8 +138,7 @@
 </nav>
 
 <!--Profile Modal-->
-
-<div class=" modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class=" modal fade bd-settings-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="settings-content modal-content">
             <div class="container">
@@ -184,6 +184,30 @@
                     </form>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<!--Booking Modal-->
+<div class="modal fade bd-booking-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <form>
+                <div class="form-group">
+                    <label for="bk-car">Car</label>
+                    <input type="email" class="form-control" id="bk-car" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
     </div>
 </div>
@@ -276,7 +300,7 @@
 <!--                        <div class="d-flex flex-column"><small class="text-muted mb-2">Monthly Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/J11mEBq.png"><h6 class="ml-1">135 hp&ast;</h6></div></div>-->
 <!--                    </div>-->
 <!--                    <small class="text-muted key pl-3">Standard key Features</small>-->
-                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btn btn-warning btn-block"><small>Rent</small></button></div>
+                    <div class="mx-3 mt-3 mb-2"><button type="submit" class="btnRent btn btn-warning btn-block"><small>Rent</small></button></div>
 <!--                    <small class="d-flex justify-content-center text-muted">*Legal Disclaimer</small>-->
                 </div>
             </div>
@@ -327,7 +351,7 @@
                     <!--                        <div class="d-flex flex-column"><small class="text-muted mb-2">Monthly Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/J11mEBq.png"><h6 class="ml-1">135 hp&ast;</h6></div></div>-->
                     <!--                    </div>-->
                     <!--                    <small class="text-muted key pl-3">Standard key Features</small>-->
-                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btn btn-warning btn-block"><small>Rent</small></button></div>
+                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btnRent btn btn-warning btn-block"><small>Rent</small></button></div>
                     <!--                    <small class="d-flex justify-content-center text-muted">*Legal Disclaimer</small>-->
                 </div>
             </div>
@@ -377,7 +401,7 @@
                     <!--                        <div class="d-flex flex-column"><small class="text-muted mb-2">Monthly Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/J11mEBq.png"><h6 class="ml-1">135 hp&ast;</h6></div></div>-->
                     <!--                    </div>-->
                     <!--                    <small class="text-muted key pl-3">Standard key Features</small>-->
-                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btn btn-warning btn-block"><small>Rent</small></button></div>
+                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btnRent btn btn-warning btn-block"><small>Rent</small></button></div>
                     <!--                    <small class="d-flex justify-content-center text-muted">*Legal Disclaimer</small>-->
                 </div>
             </div>
@@ -427,7 +451,7 @@
                     <!--                        <div class="d-flex flex-column"><small class="text-muted mb-2">Monthly Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/J11mEBq.png"><h6 class="ml-1">135 hp&ast;</h6></div></div>-->
                     <!--                    </div>-->
                     <!--                    <small class="text-muted key pl-3">Standard key Features</small>-->
-                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btn btn-warning btn-block"><small>Rent</small></button></div>
+                    <div class="mx-3 mt-3 mb-2"><button type="button" class="btnRent btn btn-warning btn-block"><small>Rent</small></button></div>
                     <!--                    <small class="d-flex justify-content-center text-muted">*Legal Disclaimer</small>-->
                 </div>
             </div>
@@ -500,6 +524,9 @@
 
 
 <script>
+    $(".btnRent").click(function (){
+        $('.bd-booking-modal-lg').modal();
+    })
 </script>
 </body>
 </html>
